crates/schema/tests/compile_fail/string_no_min.rs
fn main() {
    let _ = nebula_schema::Field::string("name").min(1);
}
